# python-project-52

./: .coveragerc  .gitignore  Makefile  README.md  build.sh  pyproject.toml  pytest.ini  render.yaml  requirements.txt  ruff.toml
.github/workflows/: lint-with-ruff.yml  test-with-postgres.yml  test-with-sqlite.yml
apps/core/: urls.py  views.py
apps/label/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
apps/status/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
apps/task/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
apps/user/: admin.py  forms.py  mixins.py  tests.py  urls.py  views.py
fixtures/: user.json
task_manager/: asgi.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py  wsgi.py
task_manager/core/: error_test_urls.py  error_test_views.py  mixins.py  tests.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  user.json
task_manager/label/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_label_task_labels.py
task_manager/status/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/task/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: index.html  layout.html  login.html  status_create.html  status_delete.html  task_create.html  task_delete.html  task_detail.html  task_update.html  user_create.html  user_list.html
task_manager/tests/: test_label.py  test_status.py  test_task.py  test_user.py
task_manager/user/: admin.py  forms.py  (+5 more)
(+28 files in other folders)
