[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-bootstrap5>=24.3",
    "django>=5.1.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "whitenoise[brotli]>=6.8.2",
    "django-bootstrap-icons>=0.9.0",
    "rollbar>=1.2.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "ruff>=0.9.2",
]
